--- a/frontend/crm/src/App.css
+++ b/frontend/crm/src/App.css
@@ -6,3 +6,19 @@ body{
     font-weight: 300;
     font-style: normal;
 }
+
+::-webkit-scrollbar {
+    width: 7px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
